--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@ body{
     margin: 0 auto;
     font-size: 13px;
     color: #444;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 微軟正黑體, Arial, sans-serif;
     background: #202020;
   }
   header{
@@ -14,6 +14,21 @@ body{
   	background-color: black;
   	color:white;
   }
+  header ul{
+    display: inline;
+
+  }
+
+  header .right{
+    position: absolute;
+    right:2px;
+    padding-right:  40px;
+  }
+  header .left{
+    position: absolute;
+    left:2px;
+  }
+
   header ul li{
 
   	
@@ -170,7 +185,7 @@ td {
 	width: 160px;
 }
 
-a{color:black;
+a{color:#444;;
 text-decoration: none;
 
 
@@ -220,3 +235,41 @@ text-decoration: none;
   justify-content:center;
   text-align: center;
 }
+
+.mc1
+{
+  height:20vh;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  font-size: 40pt;
+
+}
+.mc2
+{
+  display: flex;
+  height: 30vh;
+  margin: 20px;
+}
+
+.mc2  a
+{
+  margin: 0 auto;
+  background-color:#afafaf; 
+  display: flex;
+  align-items: center;
+  font-size: 50pt;
+  font-weight:bold; 
+  justify-content:center;
+  width: 50%;
+  height: 30vh;
+  margin: 10px;
+  box-shadow: 5px 5px 5px black;
+}
+.mc2 a:hover
+{
+  
+  background-color:#bebebe; 
+  
+}
+
