--- a/css.css
+++ b/css.css
@@ -5,6 +5,7 @@ body{
     color: #444;
     font-family: 微軟正黑體, Arial, sans-serif;
     background: #202020;
+    min-width: 850px;
   }
   header{
   	position: fixed;
@@ -93,14 +94,14 @@ body{
 	padding: 70px 0px ;
 	display: flex;
 	align-items: center;
-	height:370px; 
+	height:450px; 
   min-width: 100%;
 }
 #infimg{
 	margin: 0 3%;
 	display: inline-block;
 	width:43%;
-	
+	padding: 0 20px ;
 	background-color: white; 
 	border:solid 1px;
 	border-radius: 10px;
@@ -113,6 +114,11 @@ body{
 
 	display:block;
 	margin: 50px auto;/*圖片垂直置中需用js更改*/
+}
+#infimg .img1{
+
+
+  margin: 90px auto;/*圖片垂直置中需用js更改*/
 }
 #inftable{
 	margin: 0 3%;
@@ -276,4 +282,42 @@ text-decoration: none;
 {
   width:100%;
   height: 30vh;
+}
+.GoBuyCar
+{
+  background: #202020;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-color: white;
+  border-style:solid;
+  border-width: 1px;
+}
+.GoBuyCar form
+{
+  width:100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.GoBuyCar label
+{
+  font-size: 14pt ;
+  color:white;
+
+}
+.BuyItem
+{
+  
+  width:12%;
+  margin: 0 auto;
+  font-size: 16pt ;
+  
+}
+#bpn
+{
+  width:25%;
 }
