--- a/css.css
+++ b/css.css
@@ -5,7 +5,7 @@ body{
     color: #444;
     font-family: 微軟正黑體, Arial, sans-serif;
     background: #202020;
-    min-width: 850px;
+    
   }
   header{
   	position: fixed;
@@ -47,11 +47,11 @@ body{
   .center{
   	margin:0px auto ;
   	
-  	max-width: 1200px;
+  	max-width: 1140px;
     min-height: calc(100vh - 50px);
   	
-  	
   	background-color: white;
+  	
     padding-bottom: 50px;
 
   }
@@ -176,16 +176,14 @@ td {
 
 
   /*inf結束*/
-#listleft{
-	width: 20%;
-	display: inline-block;
-	border-right: solid 1px;
-	background-color: #afafaf
-}
-#listmiddle{
+
+#listmiddle
+{
+ background-color: white;	
+ min-height: 100vh
+
 	
-	width: 80%;
-	display: inline-block;
+ 
 }
 #listmiddle img{
 	margin: 0;
@@ -428,14 +426,38 @@ dl, ol, ul
     
 
 } 
-*, ::after, ::before {
-    box-sizing: content-box;
-}
+
 iframe{
   margin: 0 auto;
 }
-a:hover { 
+ul li a:hover { 
 
 color:#fff;
 text-decoration:none;
 } 
+#listbody .center
+{background-color: #202020; }
+
+div[class|='col']{
+  text-align: center;
+  padding: 20px 5px;
+}
+#adminleft{
+  width:20%;
+  background: gray;
+}
+#adminmiddle{
+  width:80%;
+}
+#choosebrand{
+  width:20%;
+  margin: 20px;
+  
+ 
+ 
+}
+.chdiv{
+  display: flex;
+  justify-content: flex-end;
+
+}
