--- a/css.css
+++ b/css.css
@@ -29,6 +29,8 @@ body{
   header .left{
     position: absolute;
     left:2px;
+    padding-left:  40px;
+  
   }
 
   header ul li{
@@ -204,10 +206,7 @@ text-decoration: none;
 	text-align: center;
 
 }
-#listtable a:hover{
 
-	color: red;
-} 
 
 
 
@@ -342,30 +341,35 @@ text-decoration: none;
   color:white;
 
 }
-.BuyCarTable
+.BuyCarTable 
 {
   min-height:calc(100vh - 163px);
   margin: 0 20px;
 }
-.BuyCarTable table
+.BuyCarTable table,#adminmiddle table
 {
 border-collapse: collapse;
 
 }
-.BuyCarTable tr:hover
+#adminmiddle table
+{
+  margin: 20px auto;
+  width:90%;
+}
+.BuyCarTable tr:hover,#adminmiddle tr:hover
 {
   background-color: rgba(135,206,235, 0.9);
 }
-.BuyCarTable tr
+.BuyCarTable tr,#adminmiddle tr
 {
   border:1px black solid;
 
 }
-.BuyCarTable th,.BuyCarTable td
+.BuyCarTable th,.BuyCarTable td,#adminmiddle th,#adminmiddle td
 {
   padding: 10px;
 }
-.BuyCarTable th
+.BuyCarTable th,#adminmiddle th
 {
   background-color:gray;
   color:white;
@@ -433,7 +437,7 @@ iframe{
 ul li a:hover { 
 
 color:#fff;
-text-decoration:none;
+
 } 
 #listbody .center
 {background-color: #202020; }
@@ -461,3 +465,59 @@ div[class|='col']{
   justify-content: flex-end;
 
 }
+ul.left ul {
+        border: #ccc 1px solid;
+        position: absolute;
+        z-index: 99999;
+        left: -1px;
+        top: 100%;
+       min-width: 120px;
+    }
+ul.left ul { /*隱藏次選單*/
+        display: none;
+    }
+
+ul.left li:hover > ul { /* 滑鼠滑入展開次選單*/
+        display: block;
+    }
+ul.left ul li {
+    border-bottom: #ccc 1px solid;
+    display: list-item;
+    background-color: black;
+    color:white;
+    list-style-type: none; 
+
+    
+
+}
+ul.left ul li div{
+   height: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+ul.left ul li:hover {
+    
+    /*background-color: gray;
+    color:black;*/
+    
+    text-decoration:underline
+}
+
+ul.left ul li:last-child {
+    border-bottom: none;
+}
+ ul.left li {
+        position: relative;
+        white-space: nowrap;
+        /*border-right: #ccc 1px solid;*/
+    }
+ul { /* 取消ul預設的內縮及樣式 */
+        margin: 13px 0 0;
+                
+    }
+ul ul{ /* 取消ul預設的內縮及樣式 */
+        margin:0;
+        padding: 0;
+        
+    }
