--- a/css.css
+++ b/css.css
@@ -77,7 +77,7 @@ body{
   .hambtn{
     display: none
   }
-  ul.left ul {
+header ul.left ul {
         border: #ccc 1px solid;
         position: absolute;
         z-index: 99999;
@@ -85,14 +85,22 @@ body{
         top: 100%;
        min-width: 120px;
     }
-ul.left ul { /*隱藏次選單*/
+header ul.right ul {
+        border: #ccc 1px solid;
+        position: absolute;
+        z-index: 99999;
+        right: -1px;
+        top: 100%;
+       min-width: 120px;
+    }
+header ul ul { /*隱藏次選單*/
         display: none;
     }
 
-ul.left li:hover > ul { /* 滑鼠滑入展開次選單*/
+header ul li:hover > ul { /* 滑鼠滑入展開次選單*/
         display: block;
     }
-ul.left ul li {
+header ul ul li {
     border-bottom: #ccc 1px solid;
     display: list-item;
     background-color: black;
@@ -102,14 +110,14 @@ ul.left ul li {
     
 
 }
-ul.left ul li div{
+header ul ul li div{
    height: 30px;
    margin: 0 10px;
    display: flex;
    justify-content: center;
    align-items: center;
 }
-ul.left ul li:hover {
+header ul ul li:hover {
     
     /*background-color: gray;
     color:black;*/
@@ -117,10 +125,10 @@ ul.left ul li:hover {
     text-decoration:underline
 }
 
-ul.left ul li:last-child {
+header ul ul li:last-child {
     border-bottom: none;
 }
- ul.left li {
+ header ul li {
         position: relative;
         white-space: nowrap;
         /*border-right: #ccc 1px solid;*/
@@ -467,7 +475,7 @@ text-decoration: none;
   min-height:calc(100vh - 163px);
   margin: 0 20px;
 }
-.BuyCarTable table,#adminmiddle table,.deftb table
+.BuyCarTable table,.deftb table
 {
 border-collapse: collapse;
 
@@ -477,25 +485,21 @@ border-collapse: collapse;
   margin: 0 20px;
 
 }
-#adminmiddle table
-{
-  margin: 20px auto;
-  width:90%;
-}
-.BuyCarTable tr:hover,#adminmiddle tr:hover,.deftb tr:hover
+
+.BuyCarTable tr:hover,.deftb tr:hover
 {
   background-color: rgba(135,206,235, 0.9);
 }
-.BuyCarTable tr,#adminmiddle tr,.deftb tr
+.BuyCarTable tr,.deftb tr
 {
   border:1px black solid;
 
 }
-.BuyCarTable th,.BuyCarTable td,#adminmiddle th,#adminmiddle td,.deftb th,.deftb td
+.BuyCarTable th,.BuyCarTable td,.deftb th,.deftb td
 {
   padding: 10px;
 }
-.BuyCarTable th,#adminmiddle th,.deftb th
+.BuyCarTable th,.deftb th
 {
   background-color:gray;
   color:white;
