--- a/css.css
+++ b/css.css
@@ -16,6 +16,20 @@ body{
   	color:white;
     z-index:999;
   }
+  .logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height:100%;
+    position: absolute;
+    top:0;
+    font-size: 25pt;
+    z-index:1000;
+  }
+  .logo img{
+    height: 80%;
+  }
   
 
   @media (max-width: 991px)
@@ -54,6 +68,7 @@ body{
       height: 70%;
       background:none;
       border: none;
+      z-index:1100;
       }
       .hambtn>img{
         height: 100%;
@@ -90,6 +105,7 @@ body{
     display: flex;
     align-items: center;
     height: 50px;
+    z-index:1111;
   }
   .hambtn{
     display: none
@@ -152,6 +168,7 @@ header ul ul li:last-child {
     }
 ul { /* 取消ul預設的內縮及樣式 */
         margin: 13px 0 0;
+        z-index:1112;
                 
     }
 ul ul{ /* 取消ul預設的內縮及樣式 */
